--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@
         <canvas id="canvas"/>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+     <script src="pat.js"></script>
 	<script type="text/javascript" src="grid.js"></script>
 	<script type="text/javascript" src="gridinit.js"></script>
 	<script type="text/javascript" src="drawing.js"></script>
