--- a/demo.html
+++ b/demo.html
@@ -16,13 +16,16 @@
 </head>
 <body>
     <div>
-        <canvas id="canvas"/>
+        <center><canvas id="canvas"/></center>
+        
     </div>
+    <center><canvas id="controls"/></center>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-     <script src="pat.js"></script>
+
+    <script src="pat.js"></script>
 	<script type="text/javascript" src="grid.js"></script>
 	<script type="text/javascript" src="gridinit.js"></script>
-	<script type="text/javascript" src="drawing.js"></script>
+	<script type="text/javascript" src="controls.js"></script>
 	<script type="text/javascript" src="samplehandler.js"></script>
 	<script type="text/javascript" src="handleclicks.js"></script>
 	<script type="text/javascript" src="audio.js"></script>
