--- a/demo.html
+++ b/demo.html
@@ -10,16 +10,61 @@
 		canvas {
 			display: block;
 		}
+		#main_machine{
+			float: right;
+			border: 1px solid;
+			width:80%;
+			height:200px;
+		}
+		#canvas{
+			width:100%;
+			height:100%;
+		}
+		#controls{
+			width:100%;
+			margin: 5%;
+		}
+		#samples{
+			height:200px;
+			float: left;
+			border:1px solid;
+			width: 15%;
+			display: block;
+
+		}
+		#container{
+			width:80%;
+		}
+
+		.sample{
+			height: 20%;
+			/*border:1px solid;*/
+		}
+
 	</style>
 
 
 </head>
 <body>
-    <div>
-        <center><canvas id="canvas"/></center>
-        
-    </div>
-    <center><canvas id="controls"/></center>
+	<div id="container">
+		<div id="samples">
+			<div id="s1" class="sample">Sample 1</div>
+			<div id="s2" class="sample">Sample 2</div>
+			<div id="s3" class="sample">Sample 3</div>
+			<div id="s4" class="sample">Sample 4</div>
+			<div id="s5" class="sample">Sample 5</div>
+		</div>
+
+	    <div id="main_machine">
+
+	       <canvas id="canvas"/>
+	        
+	    </div>
+	    <div id="c">
+	  		<canvas id="controls"/>
+	  	</div>
+  	</div>
+
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <script src="pat.js"></script>
@@ -28,7 +73,6 @@
 	<script type="text/javascript" src="controls.js"></script>
 	<script type="text/javascript" src="samplehandler.js"></script>
 	<script type="text/javascript" src="handleclicks.js"></script>
-	<script type="text/javascript" src="audio.js"></script>
 	<script type="text/javascript" src="metronome.js"></script>
 </body>
 </html>
