--- a/demo.html
+++ b/demo.html
@@ -21,13 +21,18 @@
 			height:100%;
 		}
 		#controls{
-			width:100%;
-			/*margin: 5%;*/
+
+			width:70%;
+			height: 50px;
+			border: 15px;
+			margin-left: 15%;
+
 		}
 		#samples{
 			height:200px;
 			float: left;
-			border:1px solid;
+			/*height:75%;*/
+			/*border:1px solid;*/
 			width: 15%;
 			display: block;
 
@@ -38,7 +43,15 @@
 			/*width:80%;*/
 		}
 
+		.scroll{
+			font-family: "Courier New";
+			float: left;
+			width: 50%;
+		}
 		.sample{
+			/*float: left;*/
+			font-size: 12px;
+
 			height: 20%;
 			/*border:1px solid;*/
 		}
@@ -51,6 +64,17 @@
 		   /*transform:translate(0px,100px);*/
 		}
 
+		.selector{
+		/*width: 240px;*/
+			height:100%;
+			width: 50%;
+		   height: 34px;
+		   overflow: hidden;
+		   /*background: url(new_arrow.png) no-repeat right #ddd;*/
+		   border: 1px solid #ccc;
+		}
+
+
 	</style>
 
 
@@ -58,29 +82,29 @@
 <body>
 	<div id="container">
 		<div id="samples">
-			<div class="sample">
-				TOM
-				<select id="s1" onchange="changeFunc(1)">
-				</select>
-			</div>
-			<div class="sample"  >
-				ClICK
-				<select id="s2" onchange="changeFunc(2)">
-				</select>
-			</div>
-			<div class="sample"  >
-				HIHAT
-				<select id="s3" onchange="changeFunc(3)">
-				</select>
-			</div>
+			<div class="scroll">TOM</div>
 			<div class="sample" >
-				SNARE
-				<select id="s4" onchange="changeFunc(4)">
+				<select id="s1" class="selector" onchange="changeFunc(1)">
 				</select>
 			</div>
+			<div class="scroll">CLICK</div>
+			<div class="sample"  >
+				<select id="s2" class="selector" onchange="changeFunc(2)">
+				</select>
+			</div>
+			<div class="scroll">HI_HAT</div>
+			<div class="sample"  >
+				<select id="s3" class="selector"  onchange="changeFunc(3)">
+				</select>
+			</div>
+			<div class="scroll">SNARE</div>
 			<div class="sample" >
-				KICK
-				<select id="s5" onchange="changeFunc(5)">
+				<select id="s4" class="selector" onchange="changeFunc(4)">
+				</select>
+			</div>
+			<div class="scroll">KICK</div>
+			<div class="sample" >
+				<select id="s5" class="selector" onchange="changeFunc(5)">
 				</select>
 			</div>
 		</div>
@@ -93,6 +117,7 @@
 	    </div>
 
 	    <input id="speed" type ="range" min ="0.1" max="3.0" step ="0.1"/>
+	    <input id="gain" type ="range" min ="0.1" max="1.0" step ="0.1"/>
 
 
 	    <div id="c">
