--- a/index.html
+++ b/index.html
@@ -12,34 +12,39 @@
 		}
 		#main_machine{
 			float: left;
-			border: 1px solid;
-			width:70%;
-			height:200px;
+			/*border-left: 1px solid;*/
+			width:85%;
+			height:90%;
 		}
 		#canvas{
 			width:100%;
 			height:100%;
+			border:1px solid;
 		}
 		#controls{
-
-			width:70%;
-			height: 50px;
-			border: 15px;
-			margin-left: 15%;
+			position: relative;
+			float:left;
+			width:35%;
+			height:100%;
+			/*height: 50px;*/
+			/*border: 15px;*/
+			/*margin-left: 15%;*/
 
 		}
 		#samples{
-			height:200px;
+			/*height:200px;*/
 			float: left;
-			/*height:75%;*/
+			height:90%;
 			/*border:1px solid;*/
 			width: 15%;
-			display: block;
+			/*display: block;*/
 
 		}
 		#container{
-			border:5px solid;
-			margin:100px;
+			width:90%;
+			height: 500px;
+			border:1px solid;
+			margin: 5%;
 			/*width:80%;*/
 		}
 
@@ -57,11 +62,34 @@
 		}
 
 		#speed{
+			position: relative;
 			border:1px solid;
 			/*height:100px;*/
-			/*float: left;*/
-		   transform: rotate(270deg) translate(-100px);
+			padding:10px;
+			float: left;
+		   /*transform: rotate(270deg) translate(-100px);*/
 		   /*transform:translate(0px,100px);*/
+		}
+
+		#gain{
+			position: relative;
+			padding:10px;
+			float: left;
+			/*transform: rotate(270deg) translate(-100px);*/
+
+		}
+
+		#c{
+			/*width:15%;*/
+			/*height: 50px;*/
+			/*border: 15px;*/
+			float: left;
+			margin-left: 15%;
+			height: 10%;
+			/*height:50px;*/
+			width: 85%;
+			border:1px solid;
+			/*height:50px;*/
 		}
 
 		.selector{
@@ -72,6 +100,11 @@
 		   overflow: hidden;
 		   /*background: url(new_arrow.png) no-repeat right #ddd;*/
 		   border: 1px solid #ccc;
+		}
+
+		#rc{
+			float: right;
+			margin-right: 5px;
 		}
 
 
@@ -116,12 +149,15 @@
 	        
 	    </div>
 
-	    <input id="speed" type ="range" min ="0.1" max="3.0" step ="0.1"/>
-	    <input id="gain" type ="range" min ="0.1" max="1.0" step ="0.1"/>
-
-
 	    <div id="c">
+	   		<div>
 	  		<canvas id="controls"/>
+	  		</div>
+	  		<div id="rc">
+	  		<input id="speed" type ="range" min ="0.1" max="3.0" step ="0.1" value="1.0"/>
+	    	<input id="gain" type ="range" min ="0.1" max="1.0" step ="0.1" value="1.0"/>
+	    	</div>
+
 	  	</div>
   	</div>
 
