--- a/index.html
+++ b/index.html
@@ -12,44 +12,101 @@
 		}
 		#main_machine{
 			float: left;
-			border: 1px solid;
-			width:70%;
-			height:200px;
+			/*border-left: 1px solid;*/
+			width:85%;
+			height:90%;
 		}
 		#canvas{
 			width:100%;
 			height:100%;
+			border:1px solid;
 		}
 		#controls{
-			width:100%;
-			/*margin: 5%;*/
+			position: relative;
+			float:left;
+			width:35%;
+			height:100%;
+			/*height: 50px;*/
+			/*border: 15px;*/
+			/*margin-left: 15%;*/
+
 		}
 		#samples{
-			height:200px;
+			/*height:200px;*/
 			float: left;
-			border:1px solid;
+			height:90%;
+			/*border:1px solid;*/
 			width: 15%;
-			display: block;
+			/*display: block;*/
 
 		}
 		#container{
-			border:5px solid;
-			margin:100px;
+			width:90%;
+			height: 500px;
+			border:1px solid;
+			margin: 5%;
 			/*width:80%;*/
 		}
 
+		.scroll{
+			font-family: "Courier New";
+			float: left;
+			width: 50%;
+		}
 		.sample{
+			/*float: left;*/
+			font-size: 12px;
+
 			height: 20%;
 			/*border:1px solid;*/
 		}
 
 		#speed{
+			position: relative;
 			border:1px solid;
 			/*height:100px;*/
-			/*float: left;*/
-		   transform: rotate(270deg) translate(-100px);
+			padding:10px;
+			float: left;
+		   /*transform: rotate(270deg) translate(-100px);*/
 		   /*transform:translate(0px,100px);*/
 		}
+
+		#gain{
+			position: relative;
+			padding:10px;
+			float: left;
+			/*transform: rotate(270deg) translate(-100px);*/
+
+		}
+
+		#c{
+			/*width:15%;*/
+			/*height: 50px;*/
+			/*border: 15px;*/
+			float: left;
+			margin-left: 15%;
+			height: 10%;
+			/*height:50px;*/
+			width: 85%;
+			border:1px solid;
+			/*height:50px;*/
+		}
+
+		.selector{
+		/*width: 240px;*/
+			height:100%;
+			width: 50%;
+		   height: 34px;
+		   overflow: hidden;
+		   /*background: url(new_arrow.png) no-repeat right #ddd;*/
+		   border: 1px solid #ccc;
+		}
+
+		#rc{
+			float: right;
+			margin-right: 5px;
+		}
+
 
 	</style>
 
@@ -58,29 +115,29 @@
 <body>
 	<div id="container">
 		<div id="samples">
-			<div class="sample">
-				TOM
-				<select id="s1" onchange="changeFunc(1)">
-				</select>
-			</div>
-			<div class="sample"  >
-				ClICK
-				<select id="s2" onchange="changeFunc(2)">
-				</select>
-			</div>
-			<div class="sample"  >
-				HIHAT
-				<select id="s3" onchange="changeFunc(3)">
-				</select>
-			</div>
+			<div class="scroll">TOM</div>
 			<div class="sample" >
-				SNARE
-				<select id="s4" onchange="changeFunc(4)">
+				<select id="s1" class="selector" onchange="changeFunc(1)">
 				</select>
 			</div>
+			<div class="scroll">CLICK</div>
+			<div class="sample"  >
+				<select id="s2" class="selector" onchange="changeFunc(2)">
+				</select>
+			</div>
+			<div class="scroll">HI_HAT</div>
+			<div class="sample"  >
+				<select id="s3" class="selector"  onchange="changeFunc(3)">
+				</select>
+			</div>
+			<div class="scroll">SNARE</div>
 			<div class="sample" >
-				KICK
-				<select id="s5" onchange="changeFunc(5)">
+				<select id="s4" class="selector" onchange="changeFunc(4)">
+				</select>
+			</div>
+			<div class="scroll">KICK</div>
+			<div class="sample" >
+				<select id="s5" class="selector" onchange="changeFunc(5)">
 				</select>
 			</div>
 		</div>
@@ -92,11 +149,15 @@
 	        
 	    </div>
 
-	    <input id="speed" type ="range" min ="0.1" max="3.0" step ="0.1"/>
-
-
 	    <div id="c">
+	   		<div>
 	  		<canvas id="controls"/>
+	  		</div>
+	  		<div id="rc">
+	  		<input id="speed" type ="range" min ="0.1" max="3.0" step ="0.1" value="1.0"/>
+	    	<input id="gain" type ="range" min ="0.1" max="1.0" step ="0.1" value="1.0"/>
+	    	</div>
+
 	  	</div>
   	</div>
 
